--- a/06-t_tests.Rmd
+++ b/06-t_tests.Rmd
@@ -153,6 +153,12 @@ set.seed(666)
 r_one <- data.frame(dat = rnorm(n = 20, mean = 20, sd = 5),
                     sample = "A")
 
+# check normality
+shapiro.test(r_one$dat)
+
+# No variance to compare
+# ...
+
 # compare random data against a population mean of 20
 t.test(r_one$dat, mu = 20)
 
@@ -245,6 +251,32 @@ t.test(dat ~ sample, data = r_two, var.equal = TRUE)
 ```
 
 The first argument we see in `t.test()` is `dat ~ sample`. Usually in R when we see a `~` (tilde) we are creating what is known as a formula. A formula tells R how it should look for interactions between data and factors. For example `Y ~ X` reads: $Y$ as a function of $X$. In our code above we see `dat ~ sample`. This means we are telling R that the *t*-test we want it to perform is when the `dat` column is a function of the `sample` column. In plain English we are dividing up the `dat` column into the two different samples we have, and then running a *t*-test on these samples. Another way of stating this is that the value of `dat` depends on the grouping it belong to (`A` or `B`). We will see this same formula notation cropping up later under ANOVAs, linear models, etc.
+
+Now that we have seen the nitty gritty of how a t-test is meant to work, click [here]() to watch a visualisation that demonstrates how the relationships between two different sample sets (based on their mean and variance) influence the results.
+
+```{r, echo=FALSE, include=FALSE}
+library(beeswarm)
+
+# Create random data
+r_norm <- data.frame(dat = c(rnorm(n = 20, mean = 4, sd = 1),
+                            rnorm(n = 20, mean = 5, sd = 1)),
+                    sample = c(rep("A", 20), rep("B", 20)))
+
+# Create a swarm
+r_norm_swarm <- beeswarm(dat ~ sample, 
+            data = r_norm, method = 'swarm', 
+            do.plot = F, pwcol = sample)[, c(1, 2, 4, 6)]
+colnames(r_one_swarm) <- c("x", "y", "colour", "sample") 
+
+beeswarm.plot <- ggplot(r_norm_swarm, aes(x, y))
+beeswarm.plot2 <- beeswarm.plot + geom_boxplot(aes(x, y,
+  group = round(x, 1)), outlier.shape = NA)
+beeswarm.plot3 <- beeswarm.plot2 + geom_point() +
+  scale_x_continuous(breaks = c(1:2), 
+         labels = c("Sample A", "SampleB"), expand = c(0, 0.5))
+beeswarm.plot3
+```
+
 
 > **TASK:** Create a visualisation to graphically demonstrate the outcome of this *t*-test.
 
